Fix all potential layout issues

--- a/src/ro.sitetheme/ro/sitetheme/resources/less/application.less
+++ b/src/ro.sitetheme/ro/sitetheme/resources/less/application.less
@@ -61,7 +61,7 @@
 
 .page-content-primary {
     min-height: 450px;
-    padding-bottom: @line-height-computed;
+    padding: 0 @line-height-computed @line-height-computed;
     background: rgba(142, 192, 94, 0.75);
 }
 
